@@ -34,9 +34,9 @@ public class CamadaPersistencia {
         empresa.setNomeFantasia("João da Silva");
         empresa.setCnpj("41.952.519/0001-57");
         empresa.setRazaoSocial("João da Silva 41952519000157");
-        empresa.setTipo(TipoEmpresa.LTDA);
+        empresa.setTipo(TipoEmpresa.MEI);
         empresa.setDataFundacao(new Date());
-        empresa.setRamoAtividade(listaDeRamoAtividades.get(0));
+        empresa.setRamoAtividade(listaDeRamoAtividades.getFirst());
 
         // Salvando a empresa
         empresas.guardar(empresa);
